--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,18 @@ astunparse==1.6.3
 cachetools==4.2.2
 certifi==2020.12.5
 chardet==4.0.0
-click==8.0.1
-colorama==0.4.4
-Flask==2.0.1
 flatbuffers==1.12
 gast==0.4.0
 google-auth==1.30.0
 google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
 grpcio==1.34.1
+gunicorn==20.1.0
 h5py==3.1.0
 idna==2.10
-itsdangerous==2.0.1
-Jinja2==3.0.1
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 Markdown==3.3.4
-MarkupSafe==2.0.1
 numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
